--- a/src/app/pages/supertopup/quotes/quotes.html
+++ b/src/app/pages/supertopup/quotes/quotes.html
@@ -180,12 +180,12 @@
                       <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                     </svg>
                   </span>
-                  {{ f?.includes }}
+                  {{ f }}
                 </li>
               </ul>
 
-              <button class="mt-3 md:mt-4 text-sm text-green-700 font-semibold hover:underline"
-                (click)="goToAllFeatures(p)">
+             <button *ngIf="p.features[0] !== 'No Key Features Available'"
+                class="mt-3 md:mt-4 text-sm text-green-700 font-semibold hover:underline" (click)="goToAllFeatures(p)">
                 View All Features
               </button>
 
